--- a/app/html/demo.html
+++ b/app/html/demo.html
@@ -1,3 +1,15 @@
-
-<div>Pug cools</div>
-<div>I'm from subfolder</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Заголовок здесь</title>
+    <meta charset="utf-8">
+  </head>
+  <body><img>
+    <ul>
+      <li><a href="#">Link</a></li>
+      <li><a href="#">Link</a></li>
+      <li><a href="#">Link</a></li>
+    </ul>
+    <p>Привет, <b>мир</b>!</p>
+  </body>
+</html>
