--- a/app/html/demo.html
+++ b/app/html/demo.html
@@ -10,6 +10,12 @@
       <li><a href="#">Link</a></li>
       <li><a href="#">Link</a></li>
     </ul>
-    <p>Привет, <b>мир</b>!</p>
+    <p>Привет, <b>Мир</b>!
+      <br>
+      Я здесь на долго.
+      
+      <br>
+      <a href="#">Я ссылка</a>.
+    </p>
   </body>
 </html>
