--- a/app/html/demo.html
+++ b/app/html/demo.html
@@ -4,7 +4,7 @@
     <title>Заголовок здесь</title>
     <meta charset="utf-8">
   </head>
-  <body><img>
+  <body class="class1 class2" id="id"><img>
     <ul>
       <li><a href="#">Link</a></li>
       <li><a href="#">Link</a></li>
@@ -17,5 +17,6 @@
       <br>
       <a href="#">Я ссылка</a>.
     </p>
+    <div class="class3"></div>
   </body>
 </html>
