--- a/app/html/demo.html
+++ b/app/html/demo.html
@@ -15,7 +15,7 @@
       Я здесь на долго.
       
       <br>
-      <a href="#">Я ссылка</a>.
+      <a href="#" target="_blank" rel="nofollow">Я ссылка</a>.
     </p>
     <div class="class3"></div>
   </body>
