--- a/app/html/demo.html
+++ b/app/html/demo.html
@@ -1,22 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Заголовок здесь</title>
     <meta charset="utf-8">
+    <title>title here</title>
+    <meta name="description" content="Описание страницы">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <link href="css/style.scc" rel="stylesheet">
   </head>
-  <body class="class1 class2" id="id"><img>
-    <ul>
-      <li><a href="#">Link</a></li>
-      <li><a href="#">Link</a></li>
-      <li><a href="#">Link</a></li>
-    </ul>
-    <p>Привет, <b>Мир</b>!
-      <br>
-      Я здесь на долго.
-      
-      <br>
-      <a href="#" target="_blank" rel="nofollow">Я ссылка</a>.
-    </p>
-    <div class="class3"></div>
+  <body>
+    <script src="js/my.js"></script>
   </body>
 </html>
