--- a/app/html/index.html
+++ b/app/html/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> 
+    <title> Главная страница
     </title>
     <meta name="description" content="Описание страницы">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +18,10 @@
         <li><a href="#">Контакты</a></li>
       </ul>
     </nav>
+    <div class="wrapper">
+      <h1>Привет, проггер!</h1>
+    </div>
     <script src="js/my.js"></script>
+    <script src="slider"></script>
   </body>
 </html>
