--- a/app/html/index.html
+++ b/app/html/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Описание страницы">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.cmo/bootstrap/4.2.1/scc/bootstrap.min.css">
     <link href="css/style.scc" rel="stylesheet">
   </head>
   <body>
@@ -21,7 +22,8 @@
     <div class="wrapper">
       <h1>Привет, проггер!</h1>
     </div>
+    <script src="jqery"></script>
     <script src="js/my.js"></script>
-    <script src="slider"></script>
+    <script src="myscript"></script>
   </body>
 </html>
