--- a/app/html/contact.html
+++ b/app/html/contact.html
@@ -2,8 +2,8 @@
 <html>
   <head lang="en">
     <meta charset="utf-8">
-    <title>Блог о Pug шаблонизаторе</title>
-    <meta name="description" content="Учимся создавать страницы и шаблоны на базе шаблонизатора Pug">
+    <title>Свяжитесь с нами</title>
+    <meta name="description" content="Присылайте нам свои вопросы по работе с Pug-шаблонизатором">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -21,9 +21,8 @@
     </nav>
     <main role="main">
       <section class="jumbotron text-center">
-        <div class="container">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quibusdam vel, magni odio voluptatibus esse nisi placeat praesentium id inventore consequuntur adipisci cumque numquam, voluptatem dolore. Inventore saepe harum quibusdam!</p>
-          <h1>Блог о Pug шаблонизаторе</h1><a class="btn btn-primary" href="#">Main call to action</a><a class="btn btn-secondary" href="#">Secondary action</a>
+        <div class="container"><img scr="https://sun9-17.userapi.com/c858524/v858524453/4e2c/TPNb_12gqk8.jpg" style="display: block">
+          <h1>Свяжитесь с нами</h1><a class="btn btn-primary" href="#">Main call to action</a><a class="btn btn-secondary" href="#">Secondary action</a>
         </div>
       </section>
     </main>
