--- a/app/html/contact.html
+++ b/app/html/contact.html
@@ -21,8 +21,8 @@
     </nav>
     <main role="main">
       <section class="jumbotron text-center">
-        <div class="container"><img scr="https://sun9-17.userapi.com/c858524/v858524453/4e2c/TPNb_12gqk8.jpg" style="display: block">
-          <h1>Свяжитесь с нами</h1><a class="btn btn-primary" href="#">Main call to action</a><a class="btn btn-secondary" href="#">Secondary action</a>
+        <div class="container">
+          <h1>Свяжитесь с нами</h1><img scr="https://sun9-17.userapi.com/c858524/v858524453/4e2c/TPNb_12gqk8.jpg" style="display: block"><a class="btn btn-primary" href="#">Main call to action</a><a class="btn btn-secondary" href="#">Secondary action</a>
         </div>
       </section>
     </main>
