--- a/app/html/index.html
+++ b/app/html/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="../css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto&amp;display=swap" rel="stylesheet">
+    <style>
+      h1{
+          font-size: 100px;
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar">
@@ -22,8 +27,11 @@
     <main role="main">
       <section class="jumbotron text-center">
         <div class="container">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quibusdam vel, magni odio voluptatibus esse nisi placeat praesentium id inventore consequuntur adipisci cumque numquam, voluptatem dolore. Inventore saepe harum quibusdam!</p>
-          <h1>Блог о Pug шаблонизаторе</h1><a class="btn btn-primary" href="#">Main call to action</a><a class="btn btn-secondary" href="#">Secondary action</a>
+          <h1>Блог о Pug шаблонизаторе</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quibusdam vel, magni odio voluptatibus esse nisi placeat praesentium id inventore consequuntur adipisci cumque numquam, voluptatem dolore. Inventore saepe harum quibusdam!
+            
+          </p><a class="btn btn-primary" href="#">Main call to action</a><a class="btn btn-secondary" href="#">Secondary action</a>
         </div>
       </section>
     </main>
@@ -31,5 +39,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/my.js"></script>
+    <script>
+      let btn = document.getElementsByClassName ("btn-primary")[0];
+      
+      btn.onclick = function () {
+          btn.style.background = "transparent"; 
+      }
+    </script>
   </body>
 </html>
