--- a/app/html/index.html
+++ b/app/html/index.html
@@ -34,10 +34,19 @@
       <section class="jumbotron text-center">
         <div class="container">
           <h1>Блог о Pug шаблонизаторе</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quibusdam vel, magni odio voluptatibus esse nisi placeat praesentium id inventore consequuntur adipisci cumque numquam, voluptatem dolore. Inventore saepe harum quibusdam!
-            
-          </p><a class="btn btn-primary" href="#">Main call to action</a><a class="btn btn-secondary" href="#">Secondary action</a>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quibusdam vel, magni odio voluptatibus esse nisi placeat praesentium id inventore consequuntur adipisci cumque numquam, voluptatem dolore. Inventore saepe harum quibusdam!</p><div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+          <img src="https://sun9-34.userapi.com/c627716/v627716400/33b30/ROBMHFos9kE.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://sun9-8.userapi.com/c626818/v626818400/478a/Y-vVzXZMFcc.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://sun9-23.userapi.com/c604423/v604423400/1e001/iNL9XRQSJgU.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+  </div><a class="btn btn-primary" href="#">Main call to action</a><a class="btn btn-secondary" href="#">Secondary action</a>
         </div>
       </section>
     </main>
