--- a/app/html/contact.html
+++ b/app/html/contact.html
@@ -22,7 +22,14 @@
     <main role="main">
       <section class="jumbotron text-center">
         <div class="container">
-          <h1>Свяжитесь с нами</h1><img scr="https://sun9-17.userapi.com/c858524/v858524453/4e2c/TPNb_12gqk8.jpg" style="display: block"><a class="btn btn-primary" href="#">Main call to action</a><a class="btn btn-secondary" href="#">Secondary action</a>
+          <h1>Свяжитесь с нами</h1>
+          <div class="carousel slide" id="carouselExampleSlidesOnly" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active"><img class="d-block w-100" src="https://sun9-21.userapi.com/5wr4bKbC2mklr3nzK8wxx8V2g6mMOSrSpaYCfA/6n2sY2TTvNQ.jpg" alt="..."/></div>
+              <div class="carousel-item"><img class="d-block w-100" src="https://sun9-10.userapi.com/8ohF5av-r0aXPaCfNogbRvbvJZROrs0e4GCRZg/45xmzA2lBlU.jpg" alt="..."/></div>
+              <div class="carousel-item"><img class="d-block w-100" src="https://sun9-16.userapi.com/ZUS6b6WqmWfsgzXA0FH3jYqK6oSKbvlb49RZUQ/Px8ZCHOcd6U.jpg" alt="..."/></div>
+            </div>
+          </div><a class="btn btn-primary" href="#">Main call to action</a><a class="btn btn-secondary" href="#">Secondary action</a>
         </div>
       </section>
     </main>
