--- a/app/html/contact.html
+++ b/app/html/contact.html
@@ -11,14 +11,14 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto&amp;display=swap" rel="stylesheet">
   </head>
   <body>
-    <nav class="navbar">
-      <ul>
-        <li><a href="#">Главная</a></li>
-        <li><a href="#">Блог</a></li>
-        <li><a href="#">Портфолио</a></li>
-        <li><a href="#">Контакты</a></li>
-      </ul>
-    </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light"><a class="navbar-brand" href="#">PugCools
+        <div class="container">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Портфолио</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
+              </ul>
+        </div></a></nav>
     <main role="main">
       <section class="jumbotron text-center">
         <div class="container">
